--- a/css/familypromise.css
+++ b/css/familypromise.css
@@ -55,7 +55,7 @@ footer{
 .help {
 	font-weight: bold;
 	text-decoration: underline;
-	color:#ffffff;
+	color:red;
 }
 .contribution{
 	font-style: italic;
